testsuite/serd-tests/bad/bad-lang-start-wide.nt
<http://example.org/s> <http://example.org/p> "hello"@βad .
